# open-audio-engine

./: .gitmodules  CMakeLists.txt  README.md
inc/openae/: audio_file.h  callbacks.h  context.h  define.h  logging.h  stream.h
src/: audio_file.c  callbacks.c  context.c  logging.c  stream.c
test/: test.c  test_psp.c
